# sift

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
crates/sift-lib/: Cargo.toml  README.md
crates/sift-lib/src/: lib.rs
src/: benchmark.rs  cli.rs  completions.rs  config.rs  error.rs  executor.rs  init.rs  lib.rs  main.rs  streaming.rs  tee.rs  tracking.rs  update.rs
src/commands/: curl.rs  git.rs  grep.rs  mod.rs  pod.rs  read.rs  swift_build.rs  swift_package.rs  tuist.rs  xcodebuild.rs  xcrun.rs
src/filters/: agvtool.rs  codesign.rs  crashlog.rs  curl.rs  docc.rs  fastlane.rs  gh.rs  git_diff.rs  git_log.rs  git_status.rs  grep.rs  ls_xcode.rs  mod.rs  pbxproj.rs  periphery.rs  plutil.rs  pod.rs  project.rs  provisioning.rs  read.rs  swift_build.rs  swift_package.rs  swift_test.rs  swiftformat.rs  swiftlint.rs  tuist.rs  types.rs  util.rs  xccov.rs  xclogparser.rs  xcode_select.rs  xcodebuild_archive.rs  xcodebuild_build.rs  xcodebuild_list.rs  xcodebuild_settings.rs  xcodebuild_test.rs  xcresulttool.rs  xcrun_simctl.rs
tests/: integration.rs  recall.rs  snapshot_tests.rs
tests/fixtures/: git_status_complex.txt  swift_build_errors.errors.json  swift_build_errors.txt  swiftlint_violations.errors.json  swiftlint_violations.txt  xcodebuild_build_failed.errors.json  xcodebuild_build_failed.txt  xcodebuild_build_succeeded.txt  xcodebuild_test_failed.errors.json  xcodebuild_test_failed.txt  xcodebuild_test_succeeded.txt
tests/snapshots/: snapshot_tests__git_status_complex_compact.snap  snapshot_tests__swift_build_errors_compact.snap  snapshot_tests__swift_build_errors_verbose.snap  snapshot_tests__swiftlint_violations_compact.snap  snapshot_tests__swiftlint_violations_verbose.snap  snapshot_tests__xcodebuild_build_failed_compact.snap  snapshot_tests__xcodebuild_build_failed_verbose.snap  snapshot_tests__xcodebuild_build_succeeded_compact.snap  snapshot_tests__xcodebuild_test_failed_compact.snap  snapshot_tests__xcodebuild_test_succeeded_compact.snap
